Actualizando cambios recientes

--- a/restaurant.html
+++ b/restaurant.html
@@ -491,12 +491,15 @@
                         </div>
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"
                              data-interval="4000">
-                            <!--<ol class="carousel-indicators">
+                            <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                            </ol>-->
+                            </ol>
                             <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="./images/2024/promo2024.jpeg" alt="Promociones 2024 Hoteles Punto MX">
+                                </div>
                                 <!--<div class="carousel-item active">
                                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_1.jpeg" alt="Promo Septiembre 1">
                                 </div>
