Fin cambios Febrero 2024

--- a/qrmenu.html
+++ b/qrmenu.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/menus-css.css">
 </head>
 <body>
-<h1 class="yellowtail-regular">Hotel Punto MX</h1>
+<h1 class="yellowtail-regular">Hoteles Punto MX</h1>
 
 <div class="container">
 
