--- a/menus.html
+++ b/menus.html
@@ -158,7 +158,7 @@
                                                  alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Restaurante MX</h5>
-                                                <a href="./files/menus/110722_M_Restaurant.pdf" target="_blank"
+                                                <a href="./files/menus2024/nuevo-menu-2024.pdf" target="_blank"
                                                    class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
                                                     Menú <i class="ti-angle-right"></i></a>
                                             </div>
@@ -170,7 +170,7 @@
                                                  alt="Bebidas - Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Menú de bebidas</h5>
-                                                <a href="./files/menus/110722_M_Bebidas.pdf" target="_blank"
+                                                <a href="./files/menus2024/cocteleria-2024.pdf" target="_blank"
                                                    class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
                                                     Menú <i class="ti-angle-right"></i></a>
                                             </div>
@@ -182,13 +182,9 @@
                                                  alt="Cafe MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Cafe MX</h5>
-                                                <a href="./files/carta-cafe-esp-qr.pdf"
+                                                <a href="#"
                                                    class="btn btn-primary btn-luxe-primary" target="_blank"
-                                                   style="font-size: 1.1rem;">Ver Menú (Esp)<i
-                                                        class="ti-angle-right"></i></a>
-                                                <a href="./files/carta-cafe-ingles-qr.pdf"
-                                                   class="btn btn-primary btn-luxe-primary" target="_blank"
-                                                   style="font-size: 1.1rem;">Ver Menú (Eng)<i
+                                                   style="font-size: 1.1rem;">Ver Menú<i
                                                         class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
@@ -199,7 +195,7 @@
                                                  alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Room Service</h5>
-                                                <a href="./files/menus/110722_M_RoomService.pdf" target="_blank"
+                                                <a href="./files/menus2024/menu-roomservice-2024.pdf" target="_blank"
                                                    class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver
                                                     Menú <i class="ti-angle-right"></i></a>
                                             </div>
