--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
   <script src="js/modernizr-2.6.2.min.js"></script>
   <!------------------------------------------------->
   <!------------------------------------------------->
-
+  <style>
+    @media screen and (max-width: 1050px){
+      .myBg{
+      background-image: url(images/01_movil.jpg)!important;
+      }
+    }
+  </style>
   <!------------------------------------------------->
 </head>
 <body class="mybody">
@@ -397,6 +403,17 @@
     <aside id="fh5co-hero" class="js-fullheight">
       <div class="flexslider js-fullheight">
         <ul class="slides myspecialC">
+          <!------------------------>
+          <li class="myBg" style="background-image: url(images/00_web.jpg);">
+            <div class="overlay-gradient"></div>
+            <div class="container">
+              <div class="col-md-12 col-md-offset-0 text-center slider-text">
+                <div class="slider-text-inner js-fullheight">
+                </div>
+              </div>
+            </div>
+          </li>
+          <!------------------------>
           <li style="background-image: url(assets/webp/LOBBY.jpeg);">
             <div class="overlay-gradient"></div>
             <div class="container">
