Actualizando link reserva

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     </aside>
     <div class="container">
       <div class="row">
-        <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
+        <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
         <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
         <a type="button" data-toggle="modal" data-target="#modalReserv1"  class="myReserv-flotante text-rsv"></a>
@@ -516,7 +516,7 @@
         <div class="row">
           <div id="availability">
             <div class="a-col action">
-              <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank">
+              <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank">
                 <span>Reserva</span> ahora
               </a>
             </div>
@@ -570,7 +570,7 @@
               <h3>Ejecutiva</h3>
               <p>Ideal para los viajeros de negocios que buscan un lugar de descanso y relajación después de un
                 día de trabajo, cuenta con una cama matrimonial y vista interna. <small><a href="rooms.html#ejecutivaAncla">Ver más...</a></small></p>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Deluxe Queen - Reverse---->
@@ -584,7 +584,7 @@
               <h3>Deluxe Cama Queen</h3>
               <p>Ubicadas del 1er al 5to piso, cuenta con ventana fija que permite la iluminación a la habitación con
                 vista al interior del hotel y televisor de 28 pulgadas. <small><a href="rooms.html#anclaDCQ">Ver más...</a></small></p>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Deluxe 2 Camas - Normal---->
@@ -598,7 +598,7 @@
               <h3>Deluxe Dos Camas Matrimoniales</h3>
               <p>Ideal para viajes en familia, con capacidad para alojar hasta cuatro personas. Cuenta con vista al
                 interior del hotel y ventana fija, televisor de 28 pulgadas.<br><span style="font-size: 1.4rem;">*Accesible para mascotas. </span><br><small><a href="rooms.html#anclaDDC">Ver más...</a></small></p>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Master Suite - Reverse---->
@@ -619,7 +619,7 @@
                 <li>*Disponibilidad de cunas</li>
                 <li><a href="rooms.html#anclaMS">Ver más...</a></li>
               </ul>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Suite Tina Antigua - Normal---->
@@ -642,7 +642,7 @@
                 <li>*Disponibilidad de cunas</li>
                 <li><a href="rooms.html#anclaSTA">Ver más...</a></li>
               </ul>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Suite Jacuzzi - Reverse---->
@@ -662,7 +662,7 @@
                 <li>*Accesible para mascotas</li>
                 <li><a href="rooms.html#anclaSJ">Ver más...</a></li>
               </ul>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Junior Suite - Normal---->
@@ -682,7 +682,7 @@
                 <li>*Accesible para mascotas</li>
                 <li><a href="rooms.html#anclaJS">Ver más...</a></li>
               </ul>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!----Suite con Vista - Reverse---->
@@ -703,7 +703,7 @@
                   <li>*Accesible para mascotas</li>
                   <li><a href="rooms.html#anclaSV">Ver más...</a></li>
               </ul>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
           <!-------Fin habitaciones-------->
