--- a/ng/index.html
+++ b/ng/index.html
@@ -441,7 +441,7 @@
 
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Book here</a>
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="mybtn-flotante text-rsv">Book here</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
                 <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
                 <a type="button" data-toggle="modal" data-target="#modalReserv1"  class="myReserv-flotante text-rsv"></a>
@@ -450,7 +450,7 @@
         <!--
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                    class="mybtn-flotante text-rsv">Book here</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
@@ -462,7 +462,7 @@
             <div class="row">
               <div id="availability">
                 <div class="a-col action">
-                  <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank">
+                  <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank">
                     <span>Reserva</span> ahora
                   </a>
                 </div>
@@ -542,7 +542,7 @@
                             <p>Ideal for business travelers looking for a place to rest and relax after a
                                 working day, has a double bed and internal view. <small><a
                                         href="rooms.html#ejecutivaAncla">See more...</a></small></p>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here<i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -560,7 +560,7 @@
                                 room with
                                 interior view of the hotel and 28-inch television.<small><a href="rooms.html#anclaDCQ">See
                                     more...</a></small></p>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -577,7 +577,7 @@
                             <p>Ideal for family trips, with capacity to accommodate up to four people. It has a view of
                                 hotel interior and fixed window, 28 inch tv.<br><span style="font-size: 1.4rem;">*Pet Friendly. </span><br><small><a
                                         href="rooms.html#anclaDDC">See more...</a></small></p>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -601,7 +601,7 @@
                                 <li>*Availability of cribs</li>
                                 <li><a href="rooms.html#anclaMS">See more...</a></li>
                             </ul>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -629,7 +629,7 @@
                                 <li>*Availability of cribs</li>
                                 <li><a href="rooms.html#anclaSTA">See more...</a></li>
                             </ul>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -653,7 +653,7 @@
                                 <li>*Pet friendly</li>
                                 <li><a href="rooms.html#anclaSJ">See more...</a></li>
                             </ul>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -677,7 +677,7 @@
                                 <li>*Pet friendly</li>
                                 <li><a href="rooms.html#anclaJS">See more...</a></li>
                             </ul>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
@@ -701,7 +701,7 @@
                                 <li>*Pet friendly</li>
                                 <li><a href="rooms.html#anclaSV">See more...</a></li>
                             </ul>
-                            <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <p><a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                   target="_blank" class="btn btn-primary btn-luxe-primary">Book here <i
                                     class="ti-angle-right"></i></a></p>
                         </div>
