--- a/ng/restaurant.html
+++ b/ng/restaurant.html
@@ -332,7 +332,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                    class="mybtn-flotante text-rsv">Book here</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
