--- a/rooms.html
+++ b/rooms.html
@@ -407,7 +407,7 @@
         </div>
         <div class="container" style="z-index:10!important;background-color: var(--bg-hover)!important;">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank"
                    class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
@@ -441,7 +441,7 @@
                             relajación después de un
                             día de trabajo, cuenta con una cama matrimonial y vista interna.</p>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -474,7 +474,7 @@
                             iluminación a la habitación con
                             vista al interior del hotel y televisor de 28 pulgadas.</p>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -511,7 +511,7 @@
                             <li>*Disponibilidad de cunas (Enviar mensaje para confirmar servicio)</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Reserva aquí<i class="ti-angle-right"></i>
                             </a>
@@ -551,7 +551,7 @@
                             <li>*Disponibilidad de cunas</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -597,7 +597,7 @@
                             <li>*Disponibilidad de cunas</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -638,7 +638,7 @@
                             <!--<li>*Accesible para mascotas</li>-->
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -689,7 +689,7 @@
                             <li>*Accesible para silla de ruedas</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
@@ -733,7 +733,7 @@
                             <li>*Accesible para mascotas</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
