Actualizando link reserva

--- a/ng/rooms.html
+++ b/ng/rooms.html
@@ -340,7 +340,7 @@
         </div>
         <div class="container" style="z-index:10!important;background-color: var(--bg-hover)!important;">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                    class="mybtn-flotante text-rsv">Book here</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
@@ -370,7 +370,7 @@
                             a
                             work day, has a double bed and internal view.</p>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -403,7 +403,7 @@
                             lighting to the room with
                             interior view of the hotel and 28-inch TV.</p>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -440,7 +440,7 @@
                             <li>*Availability of cribs (Send message to confirm service)</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Book here<i class="ti-angle-right"></i>
                             </a>
@@ -480,7 +480,7 @@
                             <li>*Availability of cribs</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -526,7 +526,7 @@
                             <li>*Availability of cribs</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -567,7 +567,7 @@
                             <!--<li>*Accessible for pets</li>-->
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -618,7 +618,7 @@
                             <li>*Wheelchair accessible</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
@@ -661,7 +661,7 @@
                             <li>*Accessible for pets</li>
                         </ul>
                         <p>
-                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"
+                            <a href="https://hotels.cloudbeds.com/reservation/iCjuDz"
                                target="_blank" class="btn btn-second btn-luxe-second">
                                 Book here <i class="ti-angle-right"></i>
                             </a>
