--- a/paquetes.html
+++ b/paquetes.html
@@ -440,7 +440,7 @@
         <!------------------------------------------->
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank"
                    class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
