--- a/tours.html
+++ b/tours.html
@@ -475,7 +475,7 @@
         <!------------------------------------------->
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank"
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank"
                    class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank"
                    class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
@@ -590,7 +590,7 @@
         <div class="container">
             <!--<div class="row">
                 5520682719recepcion@hotelespuntomx.com
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="">Reserva aquí</a>
+                <a href="https://hotels.cloudbeds.com/reservation/iCjuDz" target="_blank" class="">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5520682719&text&app_absent=0" target="_blank" class=""><i class="fa-brands fa-whatsapp"></i></a>
             </div>-->
             <div class="row justify-content-center" style="margin-bottom: 30px;">
