Actualizando link reserva

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-BWCT951Z6Z');
   </script>
   <!------------------------------------------------->
@@ -346,11 +345,12 @@
 <!------------>
 <!-- Modal -->
 <div class="modal fade" id="modalSep" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 200px;text-align: center;">
+  <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 100px;text-align: center;">
     <div class="modal-content my-mod-c">
       <div class="modal-body">
         <!-- carousel -->
-        <img class='img-fluid' id="img-tres" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+        <!--<img class='img-fluid' id="img-tres" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />-->
+        <img class='img-fluid' style="width: 100%; height: 700px!important;" src='./images/01_movil.jpg' alt='Beneficios de reserva Hoteles Punto MX' />
       </div>
     </div>
   </div>
