--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                     <h3 class="heading cursiveFont">Estacionamiento</h3>
                     <h4 class="cursiveFont fontPrimary mb-0">¿Miedo de dejar tus llaves en el estacionamiento?</h4>
                     <p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA.</p>
-                    <p>En DEPRISA no, nuestros estacionamientos son de autoservicio, <span class="fontHover">¿Qué significa autoservicio?</span> Se refiere a que en nuestros estacionamientos tú entras y sales con tu coche sin tener que dejar tus llaves a nadie, haciendo el pago en una de nuestras máquinas de cobro, todo esto, en instalaciones limpias, cuidadas y a tan solo unos pasos de lugares y sitios de interés alrededor de la ciudad.</p>
+                    <p>En DEPRISA, nuestros estacionamientos son de autoservicio, <span class="fontHover">¿Qué significa autoservicio?</span> Se refiere a que en nuestros estacionamientos tú entras y sales con tu coche sin tener que dejar tus llaves a nadie, haciendo el pago en una de nuestras máquinas de cobro, todo esto, en instalaciones limpias, cuidadas y a tan solo unos pasos de lugares y sitios de interés alrededor de la ciudad.</p>
                     <p class="cursiveFont text-center fontHover">
                       Costo $320MXN/24 horas.
                     </p>
