--- a/ng/restaurant.html
+++ b/ng/restaurant.html
@@ -439,9 +439,10 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                             </ol>-->
                             <div class="carousel-inner">
-                                <!--<div class="carousel-item active">
-                                  <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_1.jpeg" alt="Promo Septiembre 1">
+                                <div class="carousel-item active" style="display: grid; place-items: center;">
+                                    <img class="d-block w-100" src="../images/2024/brunch_hpmx.jpeg" alt="Promociones 2024 Hoteles Punto MX" style="width:350px!important; height: auto!important; ">
                                 </div>
+                                <!--
                                 <div class="carousel-item">
                                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_2.jpeg" alt="Promo Septiembre 2">
                                 </div>
