Actualizando banner principal

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <div class="modal-body">
         <!-- carousel -->
         <!--<img class='img-fluid' id="img-tres" src='./images/september/reservaFit.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />-->
-        <img class='img-fluid' style="width: 100%;" src='./images/popup.jpg' alt='Beneficios de reserva Hoteles Punto MX' />
+        <a href="https://cutt.ly/ZeqVycz4" target="_blank"><img class='img-fluid' style="width: 100%;" src='./images/popup-ba.jpg' alt='Beneficios de reserva Hoteles Punto MX' /></a>
       </div>
     </div>
   </div>
