Actualizando propuesta tours

--- a/index.html
+++ b/index.html
@@ -69,10 +69,17 @@
   <!------------------------------------------------->
   <!------------------------------------------------->
   <style>
-    @media screen and (max-width: 1050px){
+    @media screen and (max-width: 450px){
       .myBg{
-      background-image: url(images/01_movil.jpg)!important;
+      background-image: url(images/01_movil.jpeg)!important;
       }
+    }
+    @media  screen and (max-width: 1150px) {
+
+      #botonReservaBA{
+        margin-top: 450px!important; 
+      }
+      
     }
   </style>
   <!------------------------------------------------->
@@ -404,11 +411,14 @@
       <div class="flexslider js-fullheight">
         <ul class="slides myspecialC">
           <!------------------------>
-          <li class="myBg" style="background-image: url(images/00_web.jpg);">
+          <li style="background-image: url(images/00_web.png);">
             <div class="overlay-gradient"></div>
             <div class="container">
               <div class="col-md-12 col-md-offset-0 text-center slider-text">
                 <div class="slider-text-inner js-fullheight">
+                  <p id="botonReservaBA" style="margin-top: 600px;">
+                    <a href="https://cutt.ly/ZeqVycz4" class="btn btn-primary btn-lg" style="background-color: #cdaf5a;">RESERVAR</a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -526,7 +536,7 @@
     </div>
     -->
 
-    <div id="fh5co-counter-section" class="fh5co-counters">
+    <div id="fh5co-counter-section" class="fh5co-counters" style="aspect-ratio: auto; min-height: 200px;">
       <div class="container" style="padding-top: 70px!important;">
         <div class="row">
           <div class="col-md-3 text-center">
